# lan64usb

./: .gitignore  README.md  lan64.pro  lan64usb.cpp  lan64usb.h  lan64usb.pro  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
c64/: lan64.asm
firmware/: Makefile  main.c  usbconfig.h
hardware/: lan64usb-cache.lib  lan64usb.bak  lan64usb.dsn  lan64usb.kicad_pcb  lan64usb.kicad_pcb-bak  lan64usb.net  lan64usb.pro  lan64usb.rules  lan64usb.sch  lan64usb.ses
konsolen_tools/lan64_send/: lan64_send.pro  main.cpp
lan64tool/: lan64tool.cpp  lan64tool.h  lan64tool.pro  mainwindow.cpp  mainwindow.h
pc-software/konsolen_tools/lan64_send/: lan64_send.pro
pc-software/lan64tool/: CMakeLists.txt  lan64tool.pro  lan64usb_class.cpp
pc-software/lan64tool/src/: lan64usb_class.cpp  lan64usb_class.h  main.cpp  mainwindow.cpp  mainwindow.h
